# Nasa_Challenge_2025

./: README.md  api.py  app.py  cache_service.py  config.py  data_service.py  download_from_huggingface.py  download_model.py  lstm_weather_backend.py  model_service.py  optimize_model.py  predict_weather_lstm.py  pyproject.toml  replit.md  train_weather_lstm.py  weather_demo_api.py  weather_demo_app.py
attached_assets/: Pasted---1759618621113_1759618621114.txt  Pasted---1759647019995_1759647019996.txt  Pasted--ENTRENAMIENTO-DE-MODELO-CLIM-TICO-Regresi-n-multisalida--1759682607209_1759682607229.txt  Pasted--Guardando-modelo-en-weather-model-pkl-Modelo-guardado-exitosamente--1759643540332_1759643540333.txt  Pasted--Script-para-entrenar-modelo-LSTM-para-predicci-n-clim-tica-Ejecuta-esto-en-tu-m-quina-local-VSC-1759647194126_1759647194128.txt  Pasted--coding-utf-8-Random-Forest-Entrenamiento-Local-import-pandas-as-pd-import-numpy--1759680272355_1759680272359.txt  Pasted--coding-utf-8-Random-Forest-Entrenamiento-Local-import-pandas-as-pd-import-numpy--1759681129598_1759681129600.txt  Pasted--daniel-daniel-Escritorio-Hackaton-bin-python-home-daniel-Escritorio-Hackaton-train-we-1759638429181_1759638429185.txt  Pasted--daniel-daniel-Escritorio-Hackaton-bin-python-home-daniel-Escritorio-Hackaton-train-we-1759646822487_1759646822489.txt  Pasted--daniel-daniel-Escritorio-Hackaton-python3-c-from-harmony-4-import-test-historical-jan-1759619376666_1759619376667.txt  Pasted--daniel-daniel-Escritorio-Hackaton-uvicorn-app-main-app-reload-host-0-0-0-0-port-8-1759686697769_1759686697770.txt  (+16 more)
(+2 files in other folders)
