[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "joblib>=1.5.2",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]
